# pykit

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  INTEGRATION.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  codecov.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  engineering_review.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  release.yml  security.yml
docs/: CROSS_SIBLING_MATRIX.md  EXAMPLES.md  PACKAGES.md  PYKIT_LIBRARY_DESIGN.md  README.md  RELEASING.md  REVIEW.md  VERSIONING.md  architecture.md  branch-protection.md  getting-started.md  group-03-reuse-audit.md  release-process.md  sbom.md  security-model.md
docs/adr/: 0000-template.md  0001-layered-package-architecture.md  README.md
docs/policy/: DEPRECATION.md  SEMVER.md
examples/: README.md  dag_and_worker.py  database_and_cache.py  database_and_redis.py  di_and_bootstrap.py  errors_and_config.py  media_detection.py  resilience_patterns.py  validation_and_encryption.py
fuzz/: README.md  fuzz_errors.py  fuzz_jwt.py
scripts/: check_changelog_unreleased.sh
