[project]
name = "pykit-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pykit",
    "pykit-auth",
    "pykit-errors",
    "pykit-config",
    "pykit-integration",
    "pykit-logging",
    "pykit-provider",
    "pykit-pipeline",
    "pykit-server",
    "pykit-metrics",
    "pykit-testutil",
    "pykit-tool",
    "pykit-triton",
    "pykit-dataset",
    "pykit-bench",
    "pykit-validation",
    "pykit-encryption",
    "pykit-util",
    "pykit-version",
    "pykit-component",
    "pykit-resilience",
    "pykit-schema",
    "pykit-di",
    "pykit-bootstrap",
    "pykit-messaging",
    "pykit-httpclient",
    "pykit-llm",
    "pykit-storage",
    "pykit-redis",
    "pykit-database",
    "pykit-dag",
    "pykit-authz",
    "pykit-grpc",
    "pykit-observability",
    "pykit-stateful",
    "pykit-process",
    "pykit-sse",
    "pykit-worker",
    "pykit-workload",
    "pykit-discovery",
    "pykit-media",
    "pykit-security",
    "pykit-workload",
    "pykit-kafka-middleware",
    "pykit-server-middleware",
    "pykit-auth-oidc",
    "pykit-embedding",
    "pykit-vector-store",
    "pykit-openai",
    "pykit-anthropic",
    "pykit-explain",
    "pykit-hook",
    "pykit-agent",
    "aiosqlite",
    "fakeredis",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "import-linter",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
constraint-dependencies = [
    "pydantic>=2.12.0,<3.0",
    "pydantic-settings>=2.7",
    "structlog>=25.1.0",
    "grpcio>=1.70",
    "grpcio-health-checking>=1.70",
    "grpcio-reflection>=1.70",
    "prometheus-client>=0.22",
    "httpx>=0.28",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "aiokafka>=0.12",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "pyjwt>=2.10",
    "cryptography>=44.0",
]

[tool.uv.sources]
pykit                = { workspace = true }
pykit-agent          = { workspace = true }
pykit-anthropic      = { workspace = true }
pykit-auth           = { workspace = true }
pykit-auth-oidc      = { workspace = true }
pykit-authz          = { workspace = true }
pykit-integration    = { workspace = true }
pykit-bench          = { workspace = true }
pykit-bootstrap      = { workspace = true }
pykit-component      = { workspace = true }
pykit-config         = { workspace = true }
pykit-dag            = { workspace = true }
pykit-database       = { workspace = true }
pykit-dataset        = { workspace = true }
pykit-di             = { workspace = true }
pykit-discovery      = { workspace = true }
pykit-embedding      = { workspace = true }
pykit-encryption     = { workspace = true }
pykit-errors         = { workspace = true }
pykit-explain        = { workspace = true }
pykit-grpc           = { workspace = true }
pykit-hook           = { workspace = true }
pykit-httpclient     = { workspace = true }
pykit-messaging     = { workspace = true }
pykit-kafka-middleware = { workspace = true }
pykit-llm            = { workspace = true }
pykit-logging        = { workspace = true }
pykit-media          = { workspace = true }
pykit-metrics        = { workspace = true }
pykit-observability  = { workspace = true }
pykit-openai         = { workspace = true }
pykit-pipeline       = { workspace = true }
pykit-process        = { workspace = true }
pykit-provider       = { workspace = true }
pykit-redis          = { workspace = true }
pykit-resilience     = { workspace = true }
pykit-schema         = { workspace = true }
pykit-security       = { workspace = true }
pykit-server         = { workspace = true }
pykit-server-middleware = { workspace = true }
pykit-sse            = { workspace = true }
pykit-stateful       = { workspace = true }
pykit-storage        = { workspace = true }
pykit-testutil       = { workspace = true }
pykit-tool           = { workspace = true }
pykit-triton         = { workspace = true }
pykit-util           = { workspace = true }
pykit-validation     = { workspace = true }
pykit-vector-store   = { workspace = true }
pykit-version        = { workspace = true }
pykit-worker         = { workspace = true }
pykit-workload       = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
source_pkgs = [
    "pykit_errors",
    "pykit_config",
    "pykit_logging",
    "pykit_provider",
    "pykit_pipeline",
    "pykit_server",
    "pykit_metrics",
    "pykit_testutil",
    "pykit_triton",
    "pykit_dataset",
    "pykit_bench",
    "pykit_validation",
    "pykit_encryption",
    "pykit_util",
    "pykit_version",
    "pykit_component",
    "pykit_resilience",
    "pykit_di",
    "pykit_bootstrap",
    "pykit_database",
    "pykit_redis",
    "pykit_storage",
    "pykit_messaging",
    "pykit_httpclient",
    "pykit_grpc",
    "pykit_auth",
    "pykit_authz",
    "pykit_observability",
    "pykit_dag",
    "pykit_worker",
    "pykit_sse",
    "pykit_stateful",
    "pykit_llm",
    "pykit_discovery",
    "pykit_process",
    "pykit_media",
    "pykit_security",
    "pykit_workload",
    "pykit_kafka_middleware",
    "pykit_server_middleware",
    "pykit_auth_oidc",
    "pykit_embedding",
    "pykit_vector_store",
    "pykit_openai",
    "pykit_anthropic",
    "pykit_explain",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60

[tool.ruff]
target-version = "py313"
line-length = 110
src = ["packages/*/src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "UP007",  # use X | Y for union (keep Optional for readability)
    "TCH001", # move import into TYPE_CHECKING (too aggressive for protocols)
    "TCH002", # same
    "TCH003", # same
    "TC001",  # same (ruff renamed TCH → TC)
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
    "pykit_errors", "pykit_config", "pykit_logging", "pykit_provider",
    "pykit_pipeline", "pykit_server", "pykit_metrics", "pykit_testutil",
    "pykit_triton", "pykit_dataset", "pykit_bench", "pykit_validation",
    "pykit_encryption", "pykit_util", "pykit_version", "pykit_media",
    "pykit_component", "pykit_di", "pykit_bootstrap", "pykit_resilience",
    "pykit_observability", "pykit_security", "pykit_dag", "pykit_worker",
    "pykit_sse", "pykit_stateful", "pykit_database", "pykit_redis",
    "pykit_storage", "pykit_messaging", "pykit_httpclient", "pykit_grpc",
    "pykit_auth", "pykit_authz", "pykit_llm", "pykit_discovery",
    "pykit_process", "pykit_workload",
    "pykit_openai", "pykit_anthropic", "pykit_explain",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = [
    "pykit_errors",
    "pykit_config",
    "pykit_logging",
    "pykit_provider",
    "pykit_pipeline",
]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "grpc_health.*",
    "grpc_reflection.*",
    "prometheus_client.*",
    "structlog.*",
    "tritonclient.*",
    "datasets.*",
    "huggingface_hub.*",
    "kagglehub.*",
]
ignore_missing_imports = true

[tool.importlinter]
root_packages = [
    "pykit_errors", "pykit_config", "pykit_logging",
    "pykit_validation", "pykit_encryption", "pykit_util", "pykit_version", "pykit_media",
    "pykit_provider", "pykit_component", "pykit_resilience",
    "pykit_di", "pykit_bootstrap", "pykit_observability", "pykit_security",
    "pykit_pipeline", "pykit_dag", "pykit_worker", "pykit_sse", "pykit_stateful",
    "pykit_auth", "pykit_authz",
    "pykit_database", "pykit_redis", "pykit_storage", "pykit_messaging", "pykit_httpclient",
    "pykit_server", "pykit_grpc",
    "pykit_llm", "pykit_triton", "pykit_bench", "pykit_dataset",
    "pykit_discovery", "pykit_workload", "pykit_process", "pykit_testutil", "pykit_metrics",
]

[[tool.importlinter.contracts]]
name = "Layer architecture"
type = "layers"
layers = [
    "pykit_discovery | pykit_workload | pykit_process | pykit_testutil | pykit_metrics",
    "pykit_llm | pykit_triton | pykit_bench | pykit_dataset",
    "pykit_server | pykit_grpc",
    "pykit_database | pykit_redis | pykit_storage | pykit_messaging | pykit_httpclient",
    "pykit_auth | pykit_authz | pykit_security",
    "pykit_pipeline | pykit_dag | pykit_worker | pykit_sse | pykit_stateful",
    "pykit_di | pykit_bootstrap | pykit_observability",
    "pykit_provider | pykit_component | pykit_resilience",
    "pykit_validation | pykit_encryption | pykit_util | pykit_version | pykit_media",
    "pykit_errors | pykit_config | pykit_logging",
]
