[project]
name = "pykit-workspace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pykit",
    "pykit-auth",
    "pykit-auth-apikey",
    "pykit-chain",
    "pykit-errors",
    "pykit-config",
    "pykit-integration",
    "pykit-logging",
    "pykit-provider",
    "pykit-pipeline",
    "pykit-server",
    "pykit-metrics",
    "pykit-testutil",
    "pykit-tool",
    "pykit-triton",
    "pykit-dataset",
    "pykit-bench",
    "pykit-validation",
    "pykit-encryption",
    "pykit-util",
    "pykit-version",
    "pykit-component",
    "pykit-resilience",
    "pykit-schema",
    "pykit-di",
    "pykit-bootstrap",
    "pykit-messaging",
    "pykit-httpclient",
    "pykit-llm",
    "pykit-storage",
    "pykit-redis",
    "pykit-database",
    "pykit-dag",
    "pykit-authz",
    "pykit-grpc",
    "pykit-observability",
    "pykit-stateful",
    "pykit-process",
    "pykit-sse",
    "pykit-worker",
    "pykit-workload",
    "pykit-discovery",
    "pykit-media",
    "pykit-security",
    "pykit-workload",
    "pykit-kafka-middleware",
    "pykit-server-middleware",
    "pykit-auth-oidc",
    "pykit-embedding",
    "pykit-vector-store",
    "pykit-llm-providers",
    "pykit-explain",
    "pykit-hook",
    "pykit-agent",
    "pykit-mcp",
    "pykit-transcription",
    "aiosqlite",
    "fakeredis",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
    "ruff",
    "mypy",
    "import-linter",
    "aiokafka>=0.13.0",
    "cramjam>=2.11.0",
    "argon2-cffi>=25.1.0",
    "pytest-timeout>=2.4.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
constraint-dependencies = [
    "pydantic>=2.12.0,<3.0",
    "pydantic-settings>=2.7",
    "structlog>=25.1.0",
    "grpcio>=1.70",
    "grpcio-health-checking>=1.70",
    "grpcio-reflection>=1.70",
    "prometheus-client>=0.22",
    "httpx>=0.28",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "aiokafka>=0.12",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "pyjwt>=2.10",
    "cryptography>=44.0",
]

[tool.uv.sources]
pykit                = { workspace = true }
pykit-agent          = { workspace = true }
pykit-llm-providers = { workspace = true }
pykit-auth           = { workspace = true }
pykit-auth-apikey    = { workspace = true }
pykit-auth-oidc      = { workspace = true }
pykit-chain          = { workspace = true }
pykit-authz          = { workspace = true }
pykit-integration    = { workspace = true }
pykit-bench          = { workspace = true }
pykit-bootstrap      = { workspace = true }
pykit-component      = { workspace = true }
pykit-config         = { workspace = true }
pykit-dag            = { workspace = true }
pykit-database       = { workspace = true }
pykit-dataset        = { workspace = true }
pykit-di             = { workspace = true }
pykit-discovery      = { workspace = true }
pykit-embedding      = { workspace = true }
pykit-encryption     = { workspace = true }
pykit-errors         = { workspace = true }
pykit-explain        = { workspace = true }
pykit-grpc           = { workspace = true }
pykit-hook           = { workspace = true }
pykit-httpclient     = { workspace = true }
pykit-messaging     = { workspace = true }
pykit-kafka-middleware = { workspace = true }
pykit-llm            = { workspace = true }
pykit-logging        = { workspace = true }
pykit-mcp            = { workspace = true }
pykit-media          = { workspace = true }
pykit-metrics        = { workspace = true }
pykit-observability  = { workspace = true }
pykit-pipeline       = { workspace = true }
pykit-process        = { workspace = true }
pykit-provider       = { workspace = true }
pykit-redis          = { workspace = true }
pykit-resilience     = { workspace = true }
pykit-schema         = { workspace = true }
pykit-security       = { workspace = true }
pykit-server         = { workspace = true }
pykit-server-middleware = { workspace = true }
pykit-sse            = { workspace = true }
pykit-stateful       = { workspace = true }
pykit-storage        = { workspace = true }
pykit-testutil       = { workspace = true }
pykit-tool           = { workspace = true }
pykit-triton         = { workspace = true }
pykit-util           = { workspace = true }
pykit-validation     = { workspace = true }
pykit-vector-store   = { workspace = true }
pykit-version        = { workspace = true }
pykit-worker         = { workspace = true }
pykit-workload       = { workspace = true }
pykit-transcription  = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
addopts = "--tb=short -q --import-mode=importlib -n auto -m 'not integration and not benchmark'"
markers = [
    "integration: mark test as requiring live services (Redis, PostgreSQL, etc.)",
    "slow: mark test as slow-running",
    "benchmark: mark test as a benchmark (run with -m benchmark)",
]

[tool.coverage.run]
source_pkgs = [
    "pykit_errors",
    "pykit_config",
    "pykit_logging",
    "pykit_provider",
    "pykit_pipeline",
    "pykit_server",
    "pykit_metrics",
    "pykit_testutil",
    "pykit_triton",
    "pykit_dataset",
    "pykit_bench",
    "pykit_validation",
    "pykit_encryption",
    "pykit_util",
    "pykit_version",
    "pykit_component",
    "pykit_resilience",
    "pykit_di",
    "pykit_bootstrap",
    "pykit_database",
    "pykit_redis",
    "pykit_storage",
    "pykit_messaging",
    "pykit_httpclient",
    "pykit_grpc",
    "pykit_auth",
    "pykit_authz",
    "pykit_observability",
    "pykit_dag",
    "pykit_worker",
    "pykit_sse",
    "pykit_stateful",
    "pykit_llm",
    "pykit_discovery",
    "pykit_process",
    "pykit_media",
    "pykit_security",
    "pykit_workload",
    "pykit_kafka_middleware",
    "pykit_server_middleware",
    "pykit_auth_oidc",
    "pykit_embedding",
    "pykit_vector_store",
    "pykit_llm_providers",
    "pykit_explain",
    "pykit_transcription",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85

[tool.ruff]
target-version = "py313"
line-length = 110
src = ["packages/*/src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "B9",    # flake8-bugbear opinionated
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "TRY",   # tryceratops (raise from e)
    "TRY200",
    "TRY201",
    "ASYNC", # flake8-async (sync I/O in async)
    "S",     # flake8-bandit (security)
    "PT",    # flake8-pytest-style
    "N",     # pep8-naming
    "PL",    # pylint
    "ERA",   # eradicate (commented-out code)
    "A",     # flake8-builtins (shadowing)
    "PIE",   # misc lints
    "T20",   # flake8-print (no print() in lib code)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function call in defaults
    "UP007",   # X | Y union
    "TC001", "TC002", "TC003",  # type-checking imports
    "S101",    # assert allowed in tests
    "S108",    # hardcoded temp file path (acceptable in tooling)
    "S104",    # hardcoded bind-all-interfaces (intentional for servers)
    "S311",    # non-cryptographic random (OK for non-security uses)
    "S603",    # subprocess call - we control inputs
    "S607",    # start process with partial path (system tools)
    "TRY003",  # allow long messages in raise
    "TRY300",  # try-consider-else (too prescriptive)
    "TRY301",  # raise-within-try (common pattern)
    "TRY400",  # error-instead-of-exception (logging.error is fine)
    "PLR0913", # too many arguments
    "PLR2004", # magic value in test comparisons
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "PLR0915", # too many statements
    "PLW0603", # global-statement (used in module initialization)
    "PLW2901", # redefined-loop-name
    "PLC0415", # import-outside-top-level (local imports are idiomatic Python)
    "PLW0108", # unnecessary-lambda (lambdas for deferred evaluation)
    "PLW1510", # subprocess-run-without-check (handled by caller)
    "ERA001",  # commented-out code (too noisy)
    "N818",    # exception naming
    "A002",    # builtin-argument-shadowing (type/id/input are common param names)
    "A004",    # builtin-import-shadowing
    "A001",    # builtin-variable-shadowing (TimeoutError alias)
    "SIM105",  # suppressible-exception (contextlib.suppress not always clearer)
    "ASYNC109", # async-function-with-timeout (custom timeout params are fine)
    "ASYNC240", # blocking-path-method-in-async (Path.read_text in sync-compatible code)
    "ASYNC251", # blocking-sleep-in-async (time.sleep in test/bench helpers)
    "N802",    # function naming (factory functions like RetryHandler are intentional)
    "N806",    # variable naming in functions (ANSI color constants)
    "S105",    # hardcoded password strings (test tokens and field names)
    "S110",    # try-except-pass (intentional silencing)
    "S112",    # try-except-continue (intentional resilience)
    "S324",    # insecure hash (md5 for non-security checksums)
    "S608",    # SQL injection (parameterized queries handled at call site)
    "PLC0105", # TypeVar naming conventions (In/Out are clear)
    "PLE0643", # potential-index-error (bounds checked at runtime)
    "UP046",   # non-pep695-generic-class (migration in progress)
    "UP047",   # non-pep695-generic-function (migration in progress)
    "TRY004",  # prefer-type-error (ValueError is more appropriate in context)
    "TRY201",  # verbose-raise (explicit re-raise for clarity)
    "RUF022",  # unsorted-dunder-all (order is intentional)
    "C408",    # unnecessary-dict-call (dict() is sometimes clearer)
    "PLR1714", # repeated-equality-comparison (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["E402", "S", "PLR", "N", "ANN", "T20", "PT"]
"**/tests/**/*.py" = ["S", "PLR", "N", "ANN", "T20", "PT"]
"**/benchmarks/*.py" = ["T20", "S", "PT"]
"examples/**/*.py" = ["T20", "S"]
"**/cli.py" = ["T20"]
"**/sources/*.py" = ["T20"]
"**/pykit_bench/*.py" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = [
    "pykit_errors", "pykit_config", "pykit_logging", "pykit_provider",
    "pykit_pipeline", "pykit_server", "pykit_metrics", "pykit_testutil",
    "pykit_triton", "pykit_dataset", "pykit_bench", "pykit_validation",
    "pykit_encryption", "pykit_util", "pykit_version", "pykit_media",
    "pykit_component", "pykit_di", "pykit_bootstrap", "pykit_resilience",
    "pykit_observability", "pykit_security", "pykit_dag", "pykit_worker",
    "pykit_sse", "pykit_stateful", "pykit_database", "pykit_redis",
    "pykit_storage", "pykit_messaging", "pykit_httpclient", "pykit_grpc",
    "pykit_auth", "pykit_authz", "pykit_llm", "pykit_discovery",
    "pykit_process", "pykit_workload",
    "pykit_llm_providers", "pykit_explain",
    "pykit_transcription",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
warn_redundant_casts = true
packages = [
    "pykit",
    "pykit_errors",
    "pykit_config",
    "pykit_logging",
    "pykit_provider",
    "pykit_pipeline",
    "pykit_server",
    "pykit_metrics",
    "pykit_testutil",
    "pykit_triton",
    "pykit_dataset",
    "pykit_bench",
    "pykit_validation",
    "pykit_encryption",
    "pykit_util",
    "pykit_version",
    "pykit_component",
    "pykit_resilience",
    "pykit_di",
    "pykit_bootstrap",
    "pykit_database",
    "pykit_redis",
    "pykit_storage",
    "pykit_messaging",
    "pykit_httpclient",
    "pykit_grpc",
    "pykit_auth",
    "pykit_authz",
    "pykit_observability",
    "pykit_dag",
    "pykit_worker",
    "pykit_sse",
    "pykit_stateful",
    "pykit_llm",
    "pykit_discovery",
    "pykit_process",
    "pykit_media",
    "pykit_security",
    "pykit_workload",
    "pykit_kafka_middleware",
    "pykit_server_middleware",
    "pykit_auth_oidc",
    "pykit_embedding",
    "pykit_vector_store",
    "pykit_llm_providers",
    "pykit_explain",
    "pykit_transcription",
    "pykit_agent",
    "pykit_hook",
    "pykit_mcp",
    "pykit_chain",
    "pykit_schema",
    "pykit_auth_apikey",
    "pykit_integration",
    "pykit_tool",
]

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "grpc_health.*",
    "grpc_reflection.*",
    "prometheus_client.*",
    "structlog.*",
    "tritonclient.*",
    "datasets.*",
    "huggingface_hub.*",
    "kagglehub.*",
    "hypothesis.*",
    "argon2.*",
    "qdrant_client.*",
    "PIL.*",
    "opentelemetry.propagators.b3.*",
    "mcp.*",
    "jsonschema.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.importlinter]
root_packages = [
    "pykit",
    "pykit_errors", "pykit_config", "pykit_logging",
    "pykit_validation", "pykit_encryption", "pykit_util", "pykit_version", "pykit_media",
    "pykit_provider", "pykit_component", "pykit_resilience", "pykit_schema",
    "pykit_di", "pykit_bootstrap", "pykit_observability", "pykit_security",
    "pykit_hook", "pykit_mcp", "pykit_chain",
    "pykit_pipeline", "pykit_dag", "pykit_worker", "pykit_sse", "pykit_stateful",
    "pykit_auth", "pykit_authz", "pykit_auth_oidc", "pykit_auth_apikey",
    "pykit_database", "pykit_redis", "pykit_storage", "pykit_messaging", "pykit_httpclient",
    "pykit_server", "pykit_grpc", "pykit_server_middleware", "pykit_kafka_middleware",
    "pykit_llm", "pykit_triton", "pykit_bench", "pykit_dataset",
    "pykit_embedding", "pykit_vector_store", "pykit_llm_providers", "pykit_explain",
    "pykit_transcription",
    "pykit_agent", "pykit_discovery", "pykit_workload", "pykit_process",
    "pykit_testutil", "pykit_metrics", "pykit_integration", "pykit_tool",
]

[[tool.importlinter.contracts]]
name = "Layer architecture"
type = "layers"
layers = [
    "pykit_agent | pykit_discovery | pykit_workload | pykit_process | pykit_testutil | pykit_metrics | pykit_integration",
    "pykit_llm | pykit_triton | pykit_bench | pykit_dataset | pykit_transcription | pykit_embedding | pykit_vector_store | pykit_llm_providers | pykit_explain",
    "pykit_server | pykit_grpc | pykit_server_middleware | pykit_kafka_middleware",
    "pykit_database | pykit_redis | pykit_storage | pykit_messaging | pykit_httpclient",
    "pykit_auth | pykit_authz | pykit_security | pykit_auth_oidc | pykit_auth_apikey",
    "pykit_pipeline | pykit_dag | pykit_worker | pykit_sse | pykit_stateful",
    "pykit_di | pykit_bootstrap | pykit_observability | pykit_hook | pykit_mcp | pykit_chain",
    "pykit_provider | pykit_component | pykit_resilience | pykit_schema",
    "pykit_validation | pykit_encryption | pykit_util | pykit_version | pykit_media",
    "pykit_errors | pykit_config | pykit_logging",
]

[tool.bandit]
targets = ["packages"]
recursive = true
skips = ["B101"]  # assert_used — allowed in tests
